--- a/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
@@ -30,10 +30,7 @@
           <string>Annotated Scaffold Files:</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="0">
-           <widget class="QListView" name="scaffold_annotations_listView"/>
-          </item>
-          <item row="0" column="1">
+          <item row="0" column="2">
            <widget class="QLabel" name="scaffold_annotation_label">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -43,6 +40,22 @@
             </property>
             <property name="text">
              <string>TextLabel</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QListView" name="scaffold_annotations_listView"/>
+          </item>
+          <item row="0" column="1">
+           <widget class="QLabel" name="thumbnail_preview_label">
+            <property name="sizePolicy">
+             <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
+              <horstretch>0</horstretch>
+              <verstretch>0</verstretch>
+             </sizepolicy>
+            </property>
+            <property name="text">
+             <string>Thumbnail</string>
             </property>
            </widget>
           </item>
@@ -83,7 +96,7 @@
             <item row="2" column="1">
              <widget class="QPushButton" name="pushButton_3">
               <property name="text">
-               <string>PushButton</string>
+               <string>Don't Push</string>
               </property>
              </widget>
             </item>
@@ -109,14 +122,14 @@
                </sizepolicy>
               </property>
               <property name="text">
-               <string>TextLabel</string>
+               <string/>
               </property>
              </widget>
             </item>
             <item row="0" column="1">
              <widget class="QLabel" name="label_2">
               <property name="text">
-               <string>TextLabel</string>
+               <string/>
               </property>
              </widget>
             </item>
