--- a/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
@@ -30,7 +30,7 @@
           <string>Annotated Scaffold Files:</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="2">
+          <item row="0" column="3">
            <widget class="QLabel" name="scaffold_annotation_label">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
@@ -46,7 +46,10 @@
           <item row="0" column="0">
            <widget class="QListView" name="scaffold_annotations_listView"/>
           </item>
-          <item row="0" column="1">
+            <item row="0" column="1">
+           <widget class="QListView" name="scaffold_views_listView"/>
+          </item>
+          <item row="0" column="2">
            <widget class="QLabel" name="thumbnail_preview_label">
             <property name="sizePolicy">
              <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
