--- a/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
@@ -17,193 +17,20 @@
    <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>2</number>
+      <number>0</number>
      </property>
-     <widget class="QWidget" name="scaffold_annotation_tab">
+     <widget class="ScaffoldAnnotationWidget" name="tabScaffoldAnnotation">
       <attribute name="title">
        <string>Scaffold Annotation</string>
       </attribute>
-      <layout class="QGridLayout" name="gridLayout3">
-       <item row="0" column="0">
-        <widget class="QGroupBox" name="groupBoxScaffoldAnntotations">
-         <property name="title">
-          <string>Scaffold annotations:</string>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_2">
-          <item>
-           <widget class="QTreeView" name="treeViewScaffoldAnnotations"/>
-          </item>
-          <item>
-           <layout class="QVBoxLayout" name="verticalLayout_2">
-            <item>
-             <widget class="QLabel" name="thumbnail_preview_label">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Minimum" vsizetype="Minimum">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Thumbnail preview:</string>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <widget class="QLabel" name="labelThumbnailPreview">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item>
-             <spacer name="verticalSpacer">
-              <property name="orientation">
-               <enum>Qt::Vertical</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>20</width>
-                <height>40</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="2" column="0">
-        <widget class="QGroupBox" name="groupBoxErrors">
-         <property name="layoutDirection">
-          <enum>Qt::LeftToRight</enum>
-         </property>
-         <property name="title">
-          <string>Errors:</string>
-         </property>
-         <layout class="QGridLayout" name="gridLayout2">
-          <item row="0" column="1">
-           <layout class="QGridLayout" name="gridLayoutButtons">
-            <item row="0" column="2">
-             <widget class="QPushButton" name="annotate_scaffold_button">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Annotate Scaffold</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="1">
-             <widget class="QPushButton" name="buttonFixError">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="text">
-               <string>Fix Error</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="1">
-             <widget class="QPushButton" name="buttonFixAllErrors">
-              <property name="text">
-               <string>Fix All Errors</string>
-              </property>
-             </widget>
-            </item>
-            <item row="1" column="2">
-             <widget class="QPushButton" name="pushButton_3">
-              <property name="text">
-               <string>Don't Push</string>
-              </property>
-             </widget>
-            </item>
-            <item row="0" column="0">
-             <spacer name="horizontalSpacer_2">
-              <property name="orientation">
-               <enum>Qt::Horizontal</enum>
-              </property>
-              <property name="sizeHint" stdset="0">
-               <size>
-                <width>40</width>
-                <height>20</height>
-               </size>
-              </property>
-             </spacer>
-            </item>
-           </layout>
-          </item>
-          <item row="0" column="0">
-           <widget class="QListView" name="listViewErrors">
-            <property name="sizePolicy">
-             <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-              <horstretch>1</horstretch>
-              <verstretch>0</verstretch>
-             </sizepolicy>
-            </property>
-           </widget>
-          </item>
-         </layout>
-        </widget>
-       </item>
-       <item row="1" column="0">
-        <widget class="QGroupBox" name="groupBox">
-         <property name="title">
-          <string>Manual assignment:</string>
-         </property>
-         <layout class="QHBoxLayout" name="horizontalLayout_3">
-          <item>
-           <widget class="QComboBox" name="comboBoxScaffoldMeta"/>
-          </item>
-          <item>
-           <widget class="QComboBox" name="comboBoxScaffoldView"/>
-          </item>
-          <item>
-           <widget class="QComboBox" name="comboBoxScaffoldThumbnail"/>
-          </item>
-          <item>
-           <widget class="QPushButton" name="pushButtonApply">
-            <property name="text">
-             <string>Apply</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <spacer name="horizontalSpacer_3">
-            <property name="orientation">
-             <enum>Qt::Horizontal</enum>
-            </property>
-            <property name="sizeHint" stdset="0">
-             <size>
-              <width>40</width>
-              <height>20</height>
-             </size>
-            </property>
-           </spacer>
-          </item>
-         </layout>
-        </widget>
-       </item>
-      </layout>
+      <layout class="QGridLayout" name="gridLayout3"/>
      </widget>
-     <widget class="QWidget" name="plot_annotation_tab">
+     <widget class="QWidget" name="tabPlotAnnotation">
       <attribute name="title">
        <string>Plot Annotation</string>
       </attribute>
      </widget>
-     <widget class="QWidget" name="tab">
+     <widget class="ContextAnnotationWidget" name="tabContextAnnotation">
       <attribute name="title">
        <string>Context Annotation</string>
       </attribute>
@@ -220,30 +47,8 @@
        <property name="bottomMargin">
         <number>0</number>
        </property>
-       <item>
-        <widget class="ContextAnnotationWidget" name="widget" native="true"/>
-       </item>
       </layout>
      </widget>
-    </widget>
-   </item>
-   <item>
-    <widget class="QTableView" name="tableViewScaffoldAnnotations">
-     <property name="sizePolicy">
-      <sizepolicy hsizetype="Expanding" vsizetype="Expanding">
-       <horstretch>0</horstretch>
-       <verstretch>0</verstretch>
-      </sizepolicy>
-     </property>
-     <property name="sizeAdjustPolicy">
-      <enum>QAbstractScrollArea::AdjustToContents</enum>
-     </property>
-     <property name="selectionMode">
-      <enum>QAbstractItemView::SingleSelection</enum>
-     </property>
-     <property name="selectionBehavior">
-      <enum>QAbstractItemView::SelectRows</enum>
-     </property>
     </widget>
    </item>
    <item>
@@ -277,6 +82,12 @@
    <class>ContextAnnotationWidget</class>
    <extends>QWidget</extends>
    <header>mapclientplugins/sparccurationhelperstep/helpers/contextannotationwidget.h</header>
+   <container>1</container>
+  </customwidget>
+  <customwidget>
+   <class>ScaffoldAnnotationWidget</class>
+   <extends>QWidget</extends>
+   <header>mapclientplugins/sparccurationhelperstep/helpers/scaffoldannotationwidget.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
