--- a/mapclientplugins/sparccurationhelperstep/qt/viewswidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/viewswidget.ui
@@ -31,6 +31,13 @@
      </property>
     </widget>
    </item>
+       <item row="1" column="4">
+      <widget class="QPushButton" name="pushButtonThumbnailFile">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
    <item row="0" column="1">
     <widget class="QLabel" name="labelPath">
      <property name="toolTip">
@@ -41,6 +48,13 @@
      </property>
     </widget>
    </item>
+    <item row="0" column="4">
+      <widget class="QPushButton" name="pushButtonViewFile">
+       <property name="text">
+        <string>...</string>
+       </property>
+      </widget>
+     </item>
    <item row="2" column="1">
     <widget class="QLabel" name="labelAnnotation">
      <property name="text">
