--- a/mapclientplugins/sparccurationhelperstep/qt/sampleswidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/sampleswidget.ui
@@ -21,9 +21,6 @@
      </property>
     </widget>
    </item>
-   <item row="1" column="1">
-    <widget class="QLineEdit" name="lineEditDOI"/>
-   </item>
    <item row="0" column="1">
     <widget class="QLineEdit" name="lineEditHeading"/>
    </item>
@@ -34,15 +31,8 @@
      </property>
     </widget>
    </item>
-   <item row="5" column="0">
-    <widget class="QLabel" name="labelView">
-     <property name="text">
-      <string>View:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="4" column="1">
-    <widget class="QLineEdit" name="lineEditAnnotation"/>
+   <item row="1" column="1">
+    <widget class="QLineEdit" name="lineEditDOI"/>
    </item>
    <item row="2" column="0">
     <widget class="QLabel" name="labelPath">
@@ -54,7 +44,31 @@
    <item row="2" column="1">
     <widget class="QLineEdit" name="lineEditPath"/>
    </item>
-   <item row="5" column="1" rowspan="2">
+   <item row="2" column="2">
+    <widget class="QPushButton" name="pushButtonPathFile">
+     <property name="text">
+      <string>...</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="0">
+    <widget class="QLabel" name="labelAnnotation">
+     <property name="text">
+      <string>Annotation:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="3" column="1">
+    <widget class="QLineEdit" name="lineEditAnnotation"/>
+   </item>
+   <item row="4" column="0">
+    <widget class="QLabel" name="labelView">
+     <property name="text">
+      <string>View:</string>
+     </property>
+    </widget>
+   </item>
+   <item row="4" column="1" rowspan="2">
     <widget class="QComboBox" name="comboBoxView">
      <item>
       <property name="text">
@@ -63,24 +77,17 @@
      </item>
     </widget>
    </item>
-   <item row="7" column="1">
-    <widget class="QPlainTextEdit" name="plainTextEditDescription"/>
-   </item>
-   <item row="4" column="0">
-    <widget class="QLabel" name="labelAnnotation">
-     <property name="text">
-      <string>Annotation:</string>
-     </property>
-    </widget>
-   </item>
-   <item row="6" column="0" rowspan="2">
+   <item row="5" column="0" rowspan="2">
     <widget class="QLabel" name="labelDescription">
      <property name="text">
       <string>Description:</string>
      </property>
     </widget>
    </item>
-   <item row="8" column="1">
+   <item row="6" column="1" colspan="2">
+    <widget class="QPlainTextEdit" name="plainTextEditDescription"/>
+   </item>
+   <item row="7" column="1">
     <spacer name="verticalSpacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
