Add online documentataion button

--- a/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/sparccurationhelperwidget.ui
@@ -51,6 +51,13 @@
        </property>
       </spacer>
      </item>
+    <item>
+      <widget class="QPushButton" name="pushButtonDocumentation">
+        <property name="text">
+          <string>Online Documentation</string>
+        </property>
+      </widget>
+    </item>
      <item>
       <widget class="QPushButton" name="pushButtonDone">
        <property name="text">
