Add handling for multiple context

--- a/mapclientplugins/sparccurationhelperstep/qt/contextannotationwidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/contextannotationwidget.ui
@@ -36,6 +36,27 @@
     </layout>
    </item>
    <item>
+    <layout class="QHBoxLayout" name="horizontalLayoutContextMetadata">
+     <item>
+      <widget class="QLabel" name="labelContextMetadata">
+       <property name="text">
+        <string>Matadata file for context:</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QComboBox" name="comboBoxContextMetadata">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
+       </property>
+      </widget>
+     </item>
+    </layout>
+   </item>
+   <item>
     <widget class="QTabWidget" name="tabWidget">
      <property name="tabPosition">
       <enum>QTabWidget::North</enum>
