--- a/mapclientplugins/sparccurationhelperstep/qt/scaffoldannotationwidget.ui
+++ b/mapclientplugins/sparccurationhelperstep/qt/scaffoldannotationwidget.ui
@@ -82,6 +82,16 @@
        <widget class="QComboBox" name="comboBoxSAnnotationPredicate"/>
       </item>
       <item>
+       <widget class="QCheckBox" name="checkBoxAnnotationMode">
+        <property name="toolTip">
+         <string>Append or replace entry</string>
+        </property>
+        <property name="text">
+         <string>Append</string>
+        </property>
+       </widget>
+      </item>
+      <item>
        <widget class="QComboBox" name="comboBoxAnnotationObject"/>
       </item>
       <item>
